# serializer version: 1
# name: test_all_entities[binary_sensor.heat_pump_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.heat_pump_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Error',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error',
    'unique_id': 'atw-unit-uuid-1_error',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.heat_pump_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat Pump Error',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.heat_pump_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.heat_pump_forced_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.heat_pump_forced_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Forced hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Forced hot water',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'forced_hot_water',
    'unique_id': 'atw-unit-uuid-1_forced_hot_water',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.heat_pump_forced_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heat Pump Forced hot water',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.heat_pump_forced_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.heat_pump_standby-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.heat_pump_standby',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Standby',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Standby',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'standby',
    'unique_id': 'atw-unit-uuid-1_standby',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.heat_pump_standby-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heat Pump Standby',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.heat_pump_standby',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.living_room_ac_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.living_room_ac_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Error',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error',
    'unique_id': 'ata-unit-uuid-1_error',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.living_room_ac_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Living Room AC Error',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_ac_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.living_room_ac_standby-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.living_room_ac_standby',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Standby',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Standby',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'standby',
    'unique_id': 'ata-unit-uuid-1_standby',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.living_room_ac_standby-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room AC Standby',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_ac_standby',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
